# jugc

./: .gitignore  .travis.yml  README.md  entry_points.cfg  execution_loop_test.py  jugc.sh  logSdataset1290_2d.sdf  setup.cfg
.env/: dev_requirement.txt  requirement.txt
docs/source/: conf.py  index.rst
jugc/: __init__.py  process.py  run.py  subprocess.py
jugclib/: __init__.py  jugc_subprocess.py  run.py  task.py
tests/: test_init.py
