[metadata]
name = jugc
version = attr:jugclib.__version__
author = yamasakih
author-email = yamasaki.phone@gmail.com
license = MIT
description = Library template for Python
url = https://github.com/yamasakih/jugc
classifiers = License :: OSI Approved :: MIT License

[options]
packages = jugclib
scripts = ./bin/jugc
entry_points = file: entry_points.cfg


[flake8]
exclude =
  ./.mypy_cache/,
  ./.pytest_cache/,
  ./.venv/,
  ./build/,
  ./docs/

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
follow_imports = 'normal'
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
